rewrite figures and tables

--- a/headers.tex
+++ b/headers.tex
@@ -47,8 +47,8 @@
 \newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
 \newcommand{\Abs}[1]{\left\Vert#1\right\Vert}
 \newcommand{\trace}[1]{\mathrm{Tr}\left(#1\right)}
-\newcommand{\manc}[1]{H\left(#1\right)}
-\newcommand{\tmanc}[1]{\tilde{H}\left(#1\right)}
+\newcommand{\manc}[1]{H(#1)}
+\newcommand{\tmanc}[1]{\tilde{H}(#1)}
 \newcommand{\mypar}[1]{\left( #1 \right)}
 \newcommand{\inv}[1]{{#1}^{-1}}
 \newcommand{\pinv}[1]{\inv{\mypar{#1}}}
