--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,36 @@
+@article{BaXuZh22,
+  title     = {Benchmark for discriminating power of edge centrality metrics},
+  author    = {Bao, Qi and Xu, Wanyue and Zhang, Zhongzhi},
+  journal   = {Comput. J.},
+  volume    = {65},
+  number    = {12},
+  pages     = {3141--3155},
+  year      = {2022},
+  publisher = {Oxford University Press}
+}
+
+@article{BaZh22,
+  title     = {Discriminating power of centrality measures in complex networks},
+  author    = {Bao, Qi and Zhang, Zhongzhi},
+  journal   = {IEEE Trans. Cybern.},
+  volume    = {52},
+  number    = {11},
+  pages     = {12583--12593},
+  year      = {2021},
+  publisher = {IEEE}
+}
+
+@article{GkMiSa06,
+  title     = {Random walks in peer-to-peer networks: algorithms and evaluation},
+  author    = {Gkantsidis, Christos and Mihail, Milena and Saberi, Amin},
+  journal   = {Performance Evaluation},
+  volume    = {63},
+  number    = {3},
+  pages     = {241--263},
+  year      = {2006},
+  publisher = {Elsevier}
+}
+
 @article{ZhZhXiLiGu09,
   title     = {Standard random walks and trapping on the {K}och network with scale-free behavior and small-world effect},
   author    = {Zhang, Zhongzhi and Zhou, Shuigeng and Xie, Wenlei and Chen, Lichao and Lin, Yuan and Guan, Jihong},
@@ -22,7 +55,7 @@
 
 
 @article{ShLiZh17,
-  title     = {Domination number and minimum dominating sets in pseudofractal scale-free web and Sierpi{\'n}ski graph},
+  title     = {Domination number and minimum dominating sets in pseudofractal scale-free web and {S}ierpi{\'n}ski graph},
   author    = {Shan, Liren and Li, Huan and Zhang, Zhongzhi},
   journal   = {Theoret. Comput. Sci.},
   volume    = {677},
@@ -159,7 +192,7 @@
 }
 
 @inproceedings{XuZhXiYu14,
-  title        = {Detection on application layer DDoS using random walk model},
+  title        = {Detection on application layer {DDoS} using random walk model},
   author       = {Xu, Chuan and Zhao, Guofeng and Xie, Gaogang and Yu, Shui},
   booktitle    = {2014 IEEE International Conference on Communications (ICC)},
   pages        = {707--712},
@@ -328,7 +361,7 @@
   author     = {Yuan Gao and
                 Rasmus Kyng and
                 Daniel A. Spielman},
-  title      = {Robust and Practical Solution of Laplacian Equations by Approximate
+  title      = {Robust and Practical Solution of {L}aplacian Equations by Approximate
                 Elimination},
   journal    = {CoRR},
   volume     = {abs/2303.00709},
@@ -733,19 +766,10 @@
   publisher = {Springer}
 }
 
-@inproceedings{WhSm03,
-  title     = {Algorithms for estimating relative importance in networks},
-  author    = {White, Scott and Smyth, Padhraic},
-  booktitle = {Proceedings of the ninth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  pages     = {266--275},
-  year      = {2003}
-}%   author={White, Scott and Smyth, Padhraic},, organization={ACM},={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},{Proc. ACM SIGKDD Int'l Conf. Knowledge Discovery and Data Mining},
-%{Proc. ACM SIGKDD Int'l Conf. Knowledge Discovery and Data Mining},{Proc.  Int. Conf. Knowledge Discovery and Data Mining},
-
 @article{WuZhCh11,
   title     = {Random walks on dual {S}ierpi\'{n}ski gaskets},
   author    = {Wu, Shunqi and Zhang, Zhongzhi and Chen, Guanrong},
-  journal   = {The European Physical Journal B},
+  journal   = {Eur. Phys. J. B},
   volume    = {82},
   number    = {1},
   pages     = {91--96},
@@ -756,7 +780,7 @@
 @article{XiLiZh15,
   title     = {{Spectrum of walk matrix for Koch network and its application}},
   author    = {Xie, Pinchen and Lin, Yuan and Zhang, Zhongzhi},
-  journal   = {Journal of Chemical Physics},
+  journal   = {J. Chem. Phys.},
   volume    = {142},
   number    = {22},
   pages     = {224106},
@@ -767,7 +791,7 @@
 @article{XiZhCo16,
   title     = {{On the spectrum of the normalized Laplacian of iterated triangulations of graphs}},
   author    = {Xie, Pinchen and Zhang, Zhongzhi and Comellas, Francesc},
-  journal   = {Applied Mathematics and Computation},
+  journal   = {Appl. Math. Comput.},
   volume    = {273},
   pages     = {1123--1129},
   year      = {2016},
@@ -777,7 +801,7 @@
 @article{KrSiGu08,
   title   = {Near-optimal sensor placements in Gaussian processes: Theory, efficient algorithms and empirical studies.},
   author  = {Krause, Andreas and Singh, Ajit and Guestrin, Carlos},
-  journal = {Journal of Machine Learning Research},
+  journal = {J. Mach. Learn. Res.},
   volume  = {9},
   number  = {2},
   year    = {2008}
@@ -838,7 +862,7 @@
 }
 
 @article{KlMo05,
-  title     = {Crossing numbers of Sierpi{\'n}ski-like graphs},
+  title     = {Crossing numbers of {S}ierpi{\'n}ski-like graphs},
   author    = {Klav{\v{z}}ar, Sandi and Mohar, Bojan},
   journal   = {Journal of Graph Theory},
   volume    = {50},
@@ -889,7 +913,7 @@
 }
 
 @article{QiZh18,
-  title     = {Spectral properties of extended Sierpi{\'n}ski graphs and their applications},
+  title     = {Spectral properties of extended {S}ierpi{\'n}ski graphs and their applications},
   author    = {Qi, Yi and Zhang, Zhongzhi},
   journal   = {IEEE Transactions on Network Science and Engineering},
   volume    = {6},
@@ -954,3 +978,216 @@
   year      = {2022},
   publisher = {IEEE}
 }%  journal={IEEE Transactions on Information Theory},
+
+
+@book{Ne10,
+  title     = {Networks: An Introduction},
+  author    = {Newman, Mark E. J.},
+  year      = {2010},
+  publisher = {Oxford University Press}
+}
+
+@article{LuChReZhZhZh16,
+  title     = {Vital nodes identification in complex networks},
+  author    = {L{\"u}, Linyuan and Chen, Duanbing and Ren, Xiao-Long and Zhang, Qian-Ming and Zhang, Yi-Cheng and Zhou, Tao},
+  journal   = {Physics Reports},
+  volume    = {650},
+  pages     = {1--63},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@inproceedings{WhSm03,
+  title     = {Algorithms for estimating relative importance in networks},
+  author    = {White, Scott and Smyth, Padhraic},
+  booktitle = {KDD},
+  pages     = {266--275},
+  year      = {2003}
+}
+
+@article{BoVi14,
+  title     = {Axioms for centrality},
+  author    = {Boldi, Paolo and Vigna, Sebastiano},
+  journal   = {Internet Mathematics},
+  volume    = {10},
+  number    = {3-4},
+  pages     = {222--262},
+  year      = {2014},
+  publisher = {Taylor \& Francis}
+}
+
+@article{BeKl15,
+  title     = {On the limiting behavior of parameter-dependent network centrality measures},
+  author    = {Benzi, Michele and Klymko, Christine},
+  journal   = {SIAM Journal on Matrix Analysis and Applications},
+  volume    = {36},
+  number    = {2},
+  pages     = {686--706},
+  year      = {2015},
+  publisher = {SIAM}
+}
+
+@inproceedings{BoDeRi16,
+  title     = {Centrality measures on big graphs: {E}xact, approximated, and distributed algorithms},
+  author    = {Bonchi, Francesco and De Francisci Morales, Gianmarco and Riondato, Matteo},
+  booktitle = {Proceedings of the 25th International Conference Companion on World Wide Web},
+  pages     = {1017--1020},
+  year      = {2016}
+}
+  %organization={ACM}
+
+@inproceedings{LiZh18,
+  title     = {Kirchhoff index as a measure of edge centrality in weighted networks: {N}early linear time algorithms},
+  author    = {Li, Huan and Zhang, Zhongzhi},
+  booktitle = {Proceedings of the 29th Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages     = {2377--2396},
+  year      = {2018}
+}
+  %organization={SIAM}
+
+@inproceedings{YiShLiZh18,
+  title     = {Biharmonic Distance Related Centrality for Edges in Weighted Networks.},
+  author    = {Yi, Yuhao and Shan, Liren and Li, Huan and Zhang, Zhongzhi},
+  booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence},
+  pages     = {3620--3626},
+  year      = {2018}
+}
+
+@article{Br01,
+  title     = {A faster algorithm for betweenness centrality},
+  author    = {Brandes, Ulrik},
+  journal   = {Journal of Mathematical Sociology},
+  volume    = {25},
+  number    = {2},
+  pages     = {163--177},
+  year      = {2001},
+  publisher = {Taylor \& Francis}
+}
+
+@inproceedings{GeSaSc08,
+  title     = {Better approximation of betweenness centrality},
+  author    = {Geisberger, Robert and Sanders, Peter and Schultes, Dominik},
+  booktitle = {Proceedings of the Meeting on Algorithm Engineering {\&} Expermiments},
+  pages     = {90--100},
+  year      = {2008}
+}
+  %organization={ACM}
+
+@article{Ba48,
+  title     = {A mathematical model for group structures},
+  author    = {Bavelas, Alex},
+  journal   = {Human organization},
+  volume    = {7},
+  number    = {3},
+  pages     = {16--30},
+  year      = {1948},
+  publisher = {Society for Applied Anthropology}
+}
+
+@article{Ba50,
+  title     = {Communication patterns in task-oriented groups},
+  author    = {Bavelas, Alex},
+  journal   = {The Journal of the Acoustical Society of America},
+  volume    = {22},
+  number    = {6},
+  pages     = {725--730},
+  year      = {1950},
+  publisher = {ASA}
+}
+
+@inproceedings{BrFl05,
+  title        = {Centrality Measures Based on Current Flow},
+  author       = {Brandes, Ulrik and Fleischer, Daniel},
+  booktitle    = {STACS},
+  volume       = {3404},
+  pages        = {533--544},
+  year         = {2005},
+  organization = {Springer}
+}
+
+@inproceedings{BeWeLuMe16,
+  author    = {Elisabetta Bergamini and
+               Michael Wegner and
+               Dimitar Lukarski and
+               Henning Meyerhenke},
+  title     = {Estimating Current-Flow Closeness Centrality with a Multigrid {L}aplacian
+               Solver},
+  booktitle = {Proceedings of the 7th {SIAM} Workshop on Combinatorial Scientific
+               Computing (CSC)},
+  pages     = {1--12},
+  year      = {2016},
+  url       = {https://doi.org/10.1137/1.9781611974690.ch1},
+  doi       = {10.1137/1.9781611974690.ch1},
+  timestamp = {Tue, 04 Jul 2017 08:59:39 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/siamcsc/BergaminiWLM16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{XuReLiYuLi17,
+  title     = {Efficient Algorithms for the Identification of Top-$k$ Structural Hole Spanners in Large Social Networks},
+  author    = {Xu, Wenzheng and Rezvani, Mojtaba and Liang, Weifa and Yu, Jeffrey Xu and Liu, Chengfei},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  volume    = {29},
+  number    = {5},
+  pages     = {1017--1030},
+  year      = {2017},
+  publisher = {IEEE}
+}
+
+@article{DoelPuZi09,
+  title     = {Incremental deployment of network monitors based on group betweenness centrality},
+  author    = {Dolev, Shlomi and Elovici, Yuval and Puzis, Rami and Zilberman, Polina},
+  journal   = {Information Processing Letters},
+  volume    = {109},
+  number    = {20},
+  pages     = {1172--1176},
+  year      = {2009},
+  publisher = {Elsevier}
+}
+
+@inproceedings{Yo14,
+  title        = {Almost linear-time algorithms for adaptive betweenness centrality using hypergraph sketches},
+  author       = {Yoshida, Yuichi},
+  booktitle    = {Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages        = {1416--1425},
+  year         = {2014},
+  organization = {ACM}
+}
+
+@inproceedings{MaTsUp16,
+  title        = {Scalable betweenness centrality maximization via sampling},
+  author       = {Mahmoody, Ahmad and Tsourakakis, Charalampos E and Upfal, Eli},
+  booktitle    = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages        = {1765--1773},
+  year         = {2016},
+  organization = {ACM}
+}
+
+@article{EvBo99,
+  title     = {The centrality of groups and classes},
+  author    = {Everett, Martin G and Borgatti, Stephen P},
+  journal   = {The Journal of mathematical sociology},
+  volume    = {23},
+  number    = {3},
+  pages     = {181--201},
+  year      = {1999},
+  publisher = {Taylor \& Francis}
+}
+
+@inproceedings{ZhLuToGu14,
+  title        = {Measuring and maximizing group closeness centrality over disk-resident graphs},
+  author       = {Zhao, Junzhou and Lui, John and Towsley, Don and Guan, Xiaohong},
+  booktitle    = {Proceedings of the 23rd International Conference on World Wide Web},
+  pages        = {689--694},
+  year         = {2014},
+  organization = {ACM}
+}
+
+@inproceedings{BeGoMe18,
+  title        = {Scaling up Group Closeness Maximization},
+  author       = {Bergamini, Elisabetta and Gonser, Tanya and Meyerhenke, Henning},
+  booktitle    = {2018 Proceedings of the Twentieth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  pages        = {209--222},
+  year         = {2018},
+  organization = {SIAM}
+}
