modify format of refs

--- a/refs.bib
+++ b/refs.bib
@@ -7,7 +7,7 @@
   pages     = {3141--3155},
   year      = {2022},
   publisher = {Oxford University Press}
-}
+}%  journal={The Computer Journal},
 
 @article{BaZh22,
   title     = {Discriminating power of centrality measures in complex networks},
@@ -78,27 +78,27 @@
 @inproceedings{ZhZh21,
   title     = {Maximizing influence of leaders in social networks},
   author    = {Zhou, Xiaotian and Zhang, Zhongzhi},
-  booktitle = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
+  booktitle = {KDD},
   pages     = {2400--2408},
   year      = {2021}
-}
+}% Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining
 
 @inproceedings{ZhXuZh20,
   title     = {Nearly linear time algorithm for mean hitting times of random walks on a graph},
   author    = {Zhang, Zuobai and Xu, Wanyue and Zhang, Zhongzhi},
-  booktitle = {Proceedings of the 13th International Conference on Web Search and Data Mining},
+  booktitle = {Proc. 13th Int. Conf. Web Search Data Min.},
   pages     = {726--734},
   year      = {2020}
-}
+}% booktitle = {Proceedings of the 13th International Conference on Web Search and Data Mining},
 
 @inproceedings{LiPeShYiZh19,
   title        = {Current flow group closeness centrality for complex networks},
   author       = {Li, Huan and Peng, Richard and Shan, Liren and Yi, Yuhao and Zhang, Zhongzhi},
-  booktitle    = {Proceedings of the 2019 World Wide Web Conference},
+  booktitle    = {Proc. 2019 World Wide Web Conf.},
   pages        = {961--971},
   year         = {2019},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the 2019 World Wide Web Conference},
 
 @book{KeSn76,
   title     = {Finite Markov Chains},
@@ -170,11 +170,11 @@
 @inproceedings{YiGuWeTiHa10,
   title        = {A unified framework for link recommendation using random walks},
   author       = {Yin, Zhijun and Gupta, Manish and Weninger, Tim and Han, Jiawei},
-  booktitle    = {2010 international conference on advances in social networks analysis and mining},
+  booktitle    = {Proc. IEEE ACM Int. Conf. Adv. Soc. Netw. Anal. Min.},
   pages        = {152--159},
   year         = {2010},
   organization = {IEEE}
-}
+}% booktitle    = {2010 international conference on advances in social networks analysis and mining},
 
 @article{HuWaYeChLa16,
   author  = {Kai{-}Lung Hua and
@@ -279,11 +279,11 @@
 @inproceedings{MaMaGi15,
   title        = {Absorbing random-walk centrality: Theory and algorithms},
   author       = {Mavroforakis, Charalampos and Mathioudakis, Michael and Gionis, Aristides},
-  booktitle    = {Proceedings of IEEE International Conference on Data Mining},
+  booktitle    = {Proc. IEEE Int. Conf. Data Min.},
   pages        = {901--906},
   year         = {2015},
   organization = {IEEE}
-}
+}% booktitle    = {Proceedings of IEEE International Conference on Data Mining},
 
 @article{RaZh13,
   title     = {Geometry of complex networks and topological centrality},
@@ -311,19 +311,19 @@
 @inproceedings{GaLePaGoLiZh15,
   title     = {Pivotality of nodes in reachability problems using avoidance and transit hitting time metrics},
   author    = {Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
-  booktitle = {Proceedings of the 24th International Conference on World Wide Web},
+  booktitle = {Proc. 24th Int. Conf. World Wide Web},
   pages     = {1073--1078},
   year      = {2015}
-}
+}% booktitle = {Proceedings of the 24th International Conference on World Wide Web},
 
 @inproceedings{LiYuHuCh14,
   title        = {Random-walk domination in large graphs},
   author       = {Li, Rong-Hua and Yu, Jeffrey Xu and Huang, Xin and Cheng, Hong},
-  booktitle    = {2014 IEEE 30th International Conference on Data Engineering},
+  booktitle    = {2014 IEEE 30th Int. Conf. Data Eng.},
   pages        = {736--747},
   year         = {2014},
   organization = {IEEE}
-}
+}% booktitle    = {2014 IEEE 30th International Conference on Data Engineering},
 
 @article{MoBaZhPe20,
   author  = {Songsong Mo and
@@ -350,12 +350,12 @@
 @inproceedings{WaRaSk19,
   title     = {Random walk decay centrality},
   author    = {Was, Tomasz and Rahwan, Talal and Skibski, Oskar},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  booktitle = {Proc. AAAI Conf. Artif. Intell.},
   volume    = {33},
   number    = {01},
   pages     = {2197--2204},
   year      = {2019}
-}
+}% booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
 
 @article{GaKySp23,
   author     = {Yuan Gao and
@@ -401,11 +401,11 @@
 @inproceedings{Ac01,
   title        = {Database-friendly random projections},
   author       = {Achlioptas, Dimitris},
-  booktitle    = {Proceedings of the twentieth ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+  booktitle    = {Proc. 20th ACM SIGMOD SIGACT SIGART Symp. Princ. Database Syst.},
   pages        = {274--281},
   year         = {2001},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the twentieth ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
 
 @article{BaBaPaVe04,
   author                     = {Barrat, A and Barthelemy, M and Pastor-Satorras, R and Vespignani, A},
@@ -458,29 +458,29 @@
 @article{Be09,
   title     = {Centers for random walks on trees},
   author    = {Beveridge, Andrew},
-  journal   = {SIAM Journal on Discrete Mathematics},
+  journal   = {SIAM J. Discret. Math.},
   volume    = {23},
   number    = {1},
   pages     = {300--318},
   year      = {2009},
   publisher = {SIAM}
-}
+}% journal   = {SIAM Journal on Discrete Mathematics},
 
 @article{Be16,
   title     = {A Hitting Time Formula for the Discrete {G}reen's Function},
   author    = {Beveridge, Andrew},
-  journal   = {Combinatorics, Probability and Computing},
+  journal   = {Comb. Probab. and Comput.},
   volume    = {25},
   number    = {3},
   pages     = {362--379},
   year      = {2016},
   publisher = {Cambridge University Press}
-}
+}% journal   = {Combinatorics, Probability and Computing},
 
 @inproceedings{ChLiTa08,
   title        = {Clustering via Random Walk Hitting Time on Directed Graphs},
   author       = {Chen, M. and Liu, J.  Z. and Tang, X.},
-  booktitle    = {Proc. AAAI Conf. Artificial Intelligence},
+  booktitle    = {Proc. AAAI Conf. Artif. Intell.},
   pages        = {616--621},
   year         = {2008},
   organization = {AAAI}
@@ -633,11 +633,11 @@
 @inproceedings{LiSc18,
   title        = {Spectral Subspace Sparsification},
   author       = {Li, Huan and Schild, Aaron},
-  booktitle    = {Proceedings of 2018 IEEE 59th Annual Symposium on Foundations of Computer Science},
+  booktitle    = {Proc. 2018 IEEE 59th Annu. Symp. Found. Comput. Sci.},
   pages        = {385--396},
   year         = {2018},
   organization = {IEEE}
-}
+}% booktitle    = {Proceedings of 2018 IEEE 59th Annual Symposium on Foundations of Computer Science},
 
 @article{LiZh13PRE,
   title     = {Random walks in weighted networks with a perfect trap: An application of {L}aplacian spectra},
@@ -674,11 +674,11 @@
 @inproceedings{MeZhCh08,
   title        = {Query suggestion using hitting time},
   author       = {Mei, Qiaozhu and Zhou, Dengyong and Church, Kenneth},
-  booktitle    = {{Proceedings of the 17th ACM conference on Information and Knowledge Management}},
+  booktitle    = {{Proc. 17th ACM Conf. Inf. Knowl. Manag.}},
   pages        = {469--478},
   year         = {2008},
   organization = {ACM}
-}
+}% booktitle    = {{Proceedings of the 17th ACM Conference on Information and Knowledge Management}},
 
 @article{Ne03,
   author  = {Newman, M. E. J.},
@@ -758,13 +758,13 @@
 @article{Te91,
   title     = {Random walks and the effective resistance of networks},
   author    = {Tetali, Prasad},
-  journal   = {Journal of Theoretical Probability},
+  journal   = {J. Theor. Probab.},
   volume    = {4},
   number    = {1},
   pages     = {101--109},
   year      = {1991},
   publisher = {Springer}
-}
+}% journal   = {Journal of Theoretical Probability},
 
 @article{WuZhCh11,
   title     = {Random walks on dual {S}ierpi\'{n}ski gaskets},
@@ -823,10 +823,10 @@
 @article{DiChWaBa20,
   title   = {Sampling Of 3d Point Cloud Via Gershgorin Disc Alignment},
   author  = {Chinthaka Dinesh and Gene Cheung and Fen Wang and Ivan V. Baji{\'c}},
-  journal = {2020 IEEE International Conference on Image Processing (ICIP)},
+  journal = {2020 IEEE Int. Conf. Image Process.},
   year    = {2020},
   pages   = {2736-2740}
-}
+}% journal = {2020 IEEE International Conference on Image Processing (ICIP)},
 
 @article{ChTiFeVeKo17,
   title     = {Fast resampling of three-dimensional point clouds via graphs},
@@ -864,13 +864,13 @@
 @article{KlMo05,
   title     = {Crossing numbers of {S}ierpi{\'n}ski-like graphs},
   author    = {Klav{\v{z}}ar, Sandi and Mohar, Bojan},
-  journal   = {Journal of Graph Theory},
+  journal   = {J. Graph Theory},
   volume    = {50},
   number    = {3},
   pages     = {186--198},
   year      = {2005},
   publisher = {Wiley Online Library}
-}
+}% journal   = {Journal of Graph Theory},
 
 @article{GuHa91,
   title     = {Embedding complete binary trees into butterfly networks},
@@ -915,13 +915,13 @@
 @article{QiZh18,
   title     = {Spectral properties of extended {S}ierpi{\'n}ski graphs and their applications},
   author    = {Qi, Yi and Zhang, Zhongzhi},
-  journal   = {IEEE Transactions on Network Science and Engineering},
+  journal   = {IEEE Trans. Network Sci. Eng.},
   volume    = {6},
   number    = {3},
   pages     = {512--522},
   year      = {2019},
   publisher = {IEEE}
-}
+}% journal   = {IEEE Transactions on Network Science and Engineering},
 
 @article{ZhYaLi12,
   title     = {Random walks in modular scale-free networks with multiple traps},
@@ -1019,13 +1019,13 @@
 @article{BeKl15,
   title     = {On the limiting behavior of parameter-dependent network centrality measures},
   author    = {Benzi, Michele and Klymko, Christine},
-  journal   = {SIAM Journal on Matrix Analysis and Applications},
+  journal   = {SIAM J. Matrix Anal. Appl.},
   volume    = {36},
   number    = {2},
   pages     = {686--706},
   year      = {2015},
   publisher = {SIAM}
-}
+}% journal   = {SIAM Journal on Matrix Analysis and Applications},
 
 @inproceedings{BoDeRi16,
   title     = {Centrality measures on big graphs: {E}xact, approximated, and distributed algorithms},
@@ -1039,11 +1039,12 @@
 @inproceedings{LiZh18,
   title     = {Kirchhoff index as a measure of edge centrality in weighted networks: {N}early linear time algorithms},
   author    = {Li, Huan and Zhang, Zhongzhi},
-  booktitle = {Proceedings of the 29th Annual ACM-SIAM Symposium on Discrete Algorithms},
+  booktitle = {Proc. 29th Annu. ACM SIAM Symp. Discret. Algorithms},
   pages     = {2377--2396},
   year      = {2018}
 }
   %organization={SIAM}
+  % booktitle = {Proceedings of the 29th Annual ACM-SIAM Symposium on Discrete Algorithms},
 
 @inproceedings{YiShLiZh18,
   title     = {Biharmonic Distance Related Centrality for Edges in Weighted Networks.},
@@ -1056,13 +1057,13 @@
 @article{Br01,
   title     = {A faster algorithm for betweenness centrality},
   author    = {Brandes, Ulrik},
-  journal   = {Journal of Mathematical Sociology},
+  journal   = {J. Math. Sociol.},
   volume    = {25},
   number    = {2},
   pages     = {163--177},
   year      = {2001},
   publisher = {Taylor \& Francis}
-}
+}% journal   = {Journal of Mathematical Sociology},
 
 @inproceedings{GeSaSc08,
   title     = {Better approximation of betweenness centrality},
@@ -1087,13 +1088,13 @@
 @article{Ba50,
   title     = {Communication patterns in task-oriented groups},
   author    = {Bavelas, Alex},
-  journal   = {The Journal of the Acoustical Society of America},
+  journal   = {J. Acoust. Soc. Am.},
   volume    = {22},
   number    = {6},
   pages     = {725--730},
   year      = {1950},
   publisher = {ASA}
-}
+}% journal   = {The Journal of the Acoustical Society of America},
 
 @inproceedings{BrFl05,
   title        = {Centrality Measures Based on Current Flow},
@@ -1126,24 +1127,24 @@
 @article{XuReLiYuLi17,
   title     = {Efficient Algorithms for the Identification of Top-$k$ Structural Hole Spanners in Large Social Networks},
   author    = {Xu, Wenzheng and Rezvani, Mojtaba and Liang, Weifa and Yu, Jeffrey Xu and Liu, Chengfei},
-  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  journal   = {IEEE Trans. Knowl. Data Eng.},
   volume    = {29},
   number    = {5},
   pages     = {1017--1030},
   year      = {2017},
   publisher = {IEEE}
-}
+}% journal   = {IEEE Transactions on Knowledge and Data Engineering},
 
 @article{DoelPuZi09,
   title     = {Incremental deployment of network monitors based on group betweenness centrality},
   author    = {Dolev, Shlomi and Elovici, Yuval and Puzis, Rami and Zilberman, Polina},
-  journal   = {Information Processing Letters},
+  journal   = {Inf. Process. Lett.},
   volume    = {109},
   number    = {20},
   pages     = {1172--1176},
   year      = {2009},
   publisher = {Elsevier}
-}
+}% journal   = {Information Processing Letters},
 
 @inproceedings{Yo14,
   title        = {Almost linear-time algorithms for adaptive betweenness centrality using hypergraph sketches},
@@ -1157,37 +1158,37 @@
 @inproceedings{MaTsUp16,
   title        = {Scalable betweenness centrality maximization via sampling},
   author       = {Mahmoody, Ahmad and Tsourakakis, Charalampos E and Upfal, Eli},
-  booktitle    = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  booktitle    = {KDD},
   pages        = {1765--1773},
   year         = {2016},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
 
 @article{EvBo99,
   title     = {The centrality of groups and classes},
   author    = {Everett, Martin G and Borgatti, Stephen P},
-  journal   = {The Journal of mathematical sociology},
+  journal   = {J. Math. Sociol.},
   volume    = {23},
   number    = {3},
   pages     = {181--201},
   year      = {1999},
   publisher = {Taylor \& Francis}
-}
+}% journal   = {The Journal of mathematical sociology},
 
 @inproceedings{ZhLuToGu14,
   title        = {Measuring and maximizing group closeness centrality over disk-resident graphs},
   author       = {Zhao, Junzhou and Lui, John and Towsley, Don and Guan, Xiaohong},
-  booktitle    = {Proceedings of the 23rd International Conference on World Wide Web},
+  booktitle    = {Proc. 23rd Int. Conf. World Wide Web},
   pages        = {689--694},
   year         = {2014},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the 23rd International Conference on World Wide Web},
 
 @inproceedings{BeGoMe18,
   title        = {Scaling up Group Closeness Maximization},
   author       = {Bergamini, Elisabetta and Gonser, Tanya and Meyerhenke, Henning},
-  booktitle    = {2018 Proceedings of the Twentieth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  booktitle    = {2018 Proc. Worksh. Algorithm Eng. Exp.},
   pages        = {209--222},
   year         = {2018},
   organization = {SIAM}
-}
+}% booktitle    = {2018 Proceedings of the Twentieth Workshop on Algorithm Engineering and Experiments (ALENEX)},
